--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,12 +6,27 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <!-- Bootstrap CSS (CDN) -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-..." crossorigin="anonymous">
+
     <%= vite_client_tag %>
     <%= vite_javascript_tag 'application' %>
   </head>
   <body>
+    <div class="container mt-4">
+      <!-- Flash messages -->
+      <% flash.each do |k, v| %>
+        <div class="alert alert-<%= k == 'notice' ? 'success' : 'danger' %>"><%= v %></div>
+      <% end %>
+
+      <!-- Server-rendered pages (Devise etc.) -->
+      <%= yield %>
+    </div>
+
+    <!-- SPA mount point: Vue monta aqui -->
     <div id="app"></div>
-  </body>
-</html>
+
+    <!-- Bootstrap JS (opcional) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
   </body>
 </html>
