--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= vite_javascript_tag 'application' %>
   </head>
   <body>
-    <div class="container mt-4">
+    <div>
       <!-- Flash messages -->
       <% flash.each do |k, v| %>
         <div class="alert alert-<%= k == 'notice' ? 'success' : 'danger' %>"><%= v %></div>
